fix: add index for search and update api docs
